istio/tcp_asym_edge_to_cluster_istio/hello-tcp-pub.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-tcp-pub
  labels:
    app: hello-tcp-pub
    service: hello-tcp-pub
spec:
  ports:
  - port: 7200
    protocol: TCP
  selector:
    app: hello-tcp-pub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-tcp-pub
  labels:
    app: hello-tcp-pub
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-tcp-pub
      version: v1
  template:
    metadata:
      labels:
        app: hello-tcp-pub
        version: v1
    spec:
      containers:
      - name: hello-pub-tcp
        image: rticom/rtiddsping-pub:6.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 7200
        volumeMounts:
          - name: config-volume
            mountPath: /app/tcp_config_asym.xml
            subPath: tcp_config_asym.xml
      imagePullSecrets:
      - name: regcred
      volumes:
        - name: config-volume
          configMap:
            name: tcp-config-asym
